# SmartRest_AI-Agent

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  HANDOFF.md  KNOWN_ISSUES.md  Makefile  README.md  SmartRest_Agent_Logic_Guide.md  alembic-smartrest.ini  alembic.ini  docker-compose.yml  guide.md  pyproject.toml  pytest.ini  requirements.txt  smartrest_metric_registry_blueprint.json  smartrest_sync_issue_report (1).md  smartrest_sync_issue_report.md
app/: __init__.py  main.py
app/agent/: __init__.py  calc_policy.py  calc_tools.py  formula_ast.py  graph.py  graph_support.py  live_capabilities.py  metric_registry.py  metrics_mapper.py  operation_registry.py  parser_concepts.py  parser_normalization.py  parser_numbers.py  parser_policy.py  parser_structures.py  planner_constraints.py  planner_lexicon.json  planner_lexicon.py  planning.py  planning_policy.py  report_tools.py  response_text.py  tool_registry.py  tools.py
app/api/: app.py  schemas.py
app/chat_analytics/: models.py
app/core/: auth.py  config.py  logging.py  runtime_policy.py
app/db/: __init__.py  analytics.py  operational.py  source.py
app/persistence/: __init__.py  chat_analytics_repository.py  errors.py  runtime_persistence.py  status_mapper.py  thread_id_mapper.py
app/reports/: __init__.py  catalog.py  excel_backend.py  filter_resolution.py  mock_backend.py  smartrest_backend.py
app/schemas/: __init__.py  agent.py  analysis.py  base.py  calculations.py  enums.py  reports.py  subscription.py  tools.py
data/: 12.07.2024-27.02.2025.xlsx
docs/: ARCHITECTURE.md  Milestone1_Acceptance_Criteria.md  ONBOARDING.md  OPERATIONS.md  V1_Scope_Contract.md  architecture_v1.md  runtime_setup.md
tests/: conftest.py  test_agent_runtime.py  test_agent_runtime_persistence.py  test_agent_runtime_persistence_db.py  test_api_agent.py  test_auth.py  test_calc_policy.py  test_calculation_schemas.py  test_canonical_identity_resolver.py  test_chat_analytics_migrations.py  test_chat_analytics_repository.py  test_compute_metrics_tool.py  test_db_sessions.py  test_dynamic_planning_tools.py  test_excel_backend.py  test_formula_ast.py  test_graph.py  test_live_capabilities.py  test_llm_client.py  test_llm_planning.py  test_llm_prompts.py  test_llm_response.py  test_mapped_table_sync.py  test_metric_registry.py  test_metrics_mapper.py  test_parser_normalization.py  test_parser_numbers.py  test_parser_policy.py  test_planner_constraints.py  test_planner_lexicon.py  test_planning_policy.py  test_platform_admin_service.py  test_post_sync_smoke.py  test_report_tools.py  test_report_tools_db_backend.py  test_runtime_persistence.py  test_runtime_policy.py  test_schemas.py  test_smartrest_models.py  test_smoke.py  (+4 more)
(+50 files in other folders)
