[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "smartrest-ai-agent"
version = "0.1.0"
description = "SmartRest AI reporting agent foundation"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "langgraph==1.0.10",
  "openai==2.26.0",
  "pydantic>=2.8.0,<3.0.0",
  "pydantic-settings>=2.4.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "mypy>=1.11.0,<2.0.0",
  "pre-commit>=3.8.0,<4.0.0",
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.6.0,<1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
namespace_packages = true
ignore_missing_imports = true
files = ["app"]
