[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "smartrest-ai-agent"
version = "0.1.0"
description = "SmartRest AI reporting agent foundation"
requires-python = ">=3.10"
dependencies = [
  "alembic==1.18.4",
  "fastapi==0.135.1",
  "langgraph==1.0.10",
  "openai==2.26.0",
  "psycopg[binary]==3.3.3",
  "pydantic==2.12.5",
  "pydantic-settings==2.13.1",
  "sqlalchemy==2.0.48",
  "uvicorn==0.41.0",
]

[project.optional-dependencies]
dev = [
  "httpx==0.28.1",
  "mypy==1.19.1",
  "pre-commit==3.8.0",
  "pytest==8.4.2",
  "ruff==0.15.5",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
pretty = true
show_error_codes = true
warn_unused_ignores = true
warn_return_any = true
strict_optional = true
namespace_packages = true
ignore_missing_imports = true
files = ["app"]
